# playground

./: .gitignore  .gitmodules  README.md
cppguide/: playground  playground.cc
examples/: CMakeLists.txt
examples/apis/: CMakeLists.txt  apis.cc
examples/chatroom/: CMakeLists.txt  README.md  client.cc  client_epoll.cc  server.cc  server_epoll.cc
examples/processpools/: CMakeLists.txt  README.md  cgi.cc  processpool.h
examples/redis/: CMakeLists.txt  redis.cc
examples/threadpools/: CMakeLists.txt  httpconn.cc  httpconn.h  threadpool.h  web.cc
generative_model_learning/: README.md
generative_model_learning/notes/: CLIP.md  DDPM.md  GAN.md  LDM.md  SDE.md  TransFormer.md  Understanding_Diffusion_Models_A_Unified_Perspective.md  VAE.md  VQ-GAN.md  VQ-VAE.md  WGAN.md  扩散模型领域综述.md
generative_model_learning/others/: Tools.md
generative_model_learning/papers/: links.md
homework/: zyh2.md
homework/optimization/homework/: homework3.md
homework/optimization/optimization_lab1/: admm.jl  derivate.jl  lab1_testfunction.jl  one_dimensional_search.jl
homework/optimization/optimization_lab2/: note.md
homework/optimization/optimization_lab2/code/my_models/src/config/: __init__.py  train_config.py
homework/optimization/optimization_lab2/code/my_models/src/data/: __init__.py  dataset_select.py  dataset_transforms.py
homework/optimization/optimization_lab2/code/my_models/src/data/datasets/: __init__.py  celeba_dataset.py
homework/optimization/optimization_lab2/code/my_models/src/models/: __init__.py  model.py
homework/optimization/optimization_lab2/code/my_models/src/models/taming/: util.py
homework/optimization/optimization_lab2/code/my_models/src/models/vqgan/: VQModel.py  (+2 more)
homework/optimization/optimization_lab2/code/my_models/src/training/: vqgan_traning.py
homework/optimization/optimization_lab2/code/my_models/src/utils/: __init__.py  draw.py  init_method.py  log_config.py
homework/zyh_lab/: second_derivative.jl  test.jl
hot100/: CMakeLists.txt  main.cc
leetcode-with-cpp/: CMakeLists.txt  TODO.md  main_acm.cc  main_core.cc  test_main.cc  testcase.cc  testcase.h
leetcode-with-cpp/solutions/: CMakeLists.txt  data_struct.cc  data_struct.h  my_solution.h  p704_search.cc  p704_search.h  solution_1000_1500.cc  solution_1000_1500.h  solution_1001_1500.cc  solution_1501_2000.cc  solution_1_500.cc  solution_1_500.h  solution_2001_2500.cc  solution_2500_3000.cc  solution_2500_3000.h  solution_2501_3000.cc  solution_3001_3500.cc  solution_500_1000.cc  solution_500_1000.h  solution_501_1000.cc
nvim_learning/: note.md  oesay.txt
(+4 files in other folders)
